fixing contrast errors for other sizes

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -125,8 +125,8 @@ header {
     height: 10%;
     margin: 0 auto;
     margin-top: 20%;
-    background-color: rgb(14, 150, 59);
-    color: white;
+    background-color: rgb(25, 194, 81);
+    color: rgb(0, 0, 0);
     border-radius: 20px;
     text-align: center;
     text-justify: center;
@@ -294,7 +294,7 @@ footer {
 .footer-info {
     margin: 0 auto;
     margin-top: 15vh;
-    color: rgb(14, 150, 59);
+    color: rgb(0, 0, 0);
     height: fit-content;
     border-top: solid black 1px;
     font-size: 13px;
